# stt-lux

./: .gitignore  CLAUDE.md  pyproject.toml
agent-instructions-export-from-cursor/: AGENT_PREFERENCES.md  SKILL_EXPORT_DOC_IT.md  SKILL_EXPORT_DRAW_DIAGRAMS.md  SKILL_EXPORT_TEACH_ME.md
docs/: ARCHITECTURE.md  PIPELINE_INSIGHTS.md
src/meeting_transcribe/: __init__.py  __main__.py
src/meeting_transcribe/cli/: compare.py  compare_stt.py  evaluate.py  transcribe.py
src/meeting_transcribe/core/: __init__.py  audio.py  compare_md.py  config.py  hashing.py  orchestrate_context.py  paths.py  pipeline_report.py  prompts.py  run_paths.py  structure.py  stt.py  vocab.py
wc2026/: ROUTINE_PROMPT.md  ev_picks.py
wc2026/2026-06-20/: ev_picks.py  picks.py
wc2026/2026-06-21/: ev_picks.py  ev_picks_48h.py  picks.py  summary.md
wc2026/2026-06-22/: ev_picks_48h.py  summary.md
wc2026/2026-06-23/: ev_picks.py  summary.md
wc2026/2026-06-24/: README.md  ev_picks.py
wc2026/2026-06-25/: report.txt  wc_ev.py
wc2026/2026-06-26/: ev_picks.py  summary.md
wc2026/2026-06-27/: ev_picks.py  summary.md
wc2026/2026-06-28/: ev_picks.py
wc2026/2026-06-30/: ev_picks.py
wc2026/2026-07-01/: ev_picks.py  summary.md
