[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-transcribe"
version = "0.1.0"
description = "Hebrew/English meeting transcription and LLM structuring"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.50.0",
    "pydub>=0.25.0",
]

[project.scripts]
transcribe = "meeting_transcribe.cli.transcribe:main"
compare-models = "meeting_transcribe.cli.compare:main"
compare-stt = "meeting_transcribe.cli.compare_stt:main"
evaluate-models = "meeting_transcribe.cli.evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_transcribe"]
